<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="gender_array">
        <item>М</item>
        <item>Ж</item>
    </string-array>

    <string name="app_name">Резюме</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="fio">ФИО:</string>
    <string name="birthdate">Дата Рождения:</string>
    <string name="gender">Пол:</string>
    <string name="position">Должность:</string>
    <string name="phone">Телефон:</string>
    <string name="salary">Оклад:</string>
    <string name="mail">Email:</string>
    <string name="send">Отправить резюме</string>
    <string name="title_activity_boss">Ответить</string>

    <color name="whiteColor">#FFFFFFFF</color>
    <color name="blackColor">#00000000</color>
    <color name="redColor">#FFFF0000</color>

    <string name="title_activity_reply">Ответ:</string>

    <string name="answer">Отправить ответ</string>

    <string name="write_reply">Письмо соискателю:</string>

    <string name="dog">\@</string>

</resources>
