<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_toRightOf="@+id/bdView"
    android:scrollbars="vertical" >

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@drawable/background"
		android:paddingBottom="@dimen/activity_vertical_margin"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/activity_vertical_margin"
		tools:context=".ClientActivity" >

		<TextView
			android:id="@+id/fioView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentTop="true"
			android:text="@string/fio"
			android:textSize="18sp" />
			
		<EditText
			android:id="@+id/fioText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignLeft="@+id/fioView"
			android:layout_alignParentRight="true"
			android:layout_below="@+id/fioView"
			android:ems="10"
			android:inputType="textCapWords" >
		</EditText>

		<TextView
			android:id="@+id/bdView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignLeft="@+id/fioText"
			android:layout_below="@+id/fioText"
			android:text="@string/birthdate"
			android:textSize="18sp" />

		<EditText
			android:id="@+id/bdText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignLeft="@+id/bdView"
			android:layout_below="@+id/bdView"
			android:ems="10"
			android:inputType="date" />

		<TextView
			android:id="@+id/positionView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignLeft="@+id/bdText"
			android:layout_below="@+id/bdText"
			android:text="@string/position"
			android:textSize="18sp" />

		<EditText
			android:id="@+id/positionText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignLeft="@+id/positionView"
			android:layout_alignParentRight="true"
			android:layout_below="@+id/positionView"
			android:ems="10"
			android:inputType="textCapSentences" />

		<TextView
		    android:id="@+id/phonecallView"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignLeft="@+id/positionText"
		    android:layout_below="@+id/positionText"
		    android:text="@string/phone"
		    android:textSize="18sp" />

		<EditText
			android:id="@+id/phoneText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignLeft="@+id/phonecallView"
			android:layout_alignParentRight="true"
			android:layout_below="@+id/phonecallView"
			android:ems="10"
			android:inputType="phone" />

		<TextView
			android:id="@+id/salaryView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignLeft="@+id/phoneText"
			android:layout_below="@+id/phoneText"
			android:text="@string/salary"
			android:textSize="18sp" />

		<EditText
			android:id="@+id/salaryText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignLeft="@+id/salaryView"
			android:layout_alignParentRight="true"
			android:layout_below="@+id/salaryView"
			android:ems="10"
			android:inputType="number" />

		<TextView
			android:id="@+id/mailView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignLeft="@+id/salaryText"
			android:layout_below="@+id/salaryText"
			android:text="@string/mail"
			android:textSize="18sp" />

		<EditText
			android:id="@+id/mailText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignLeft="@+id/mailView"
			android:layout_alignParentRight="true"
			android:layout_below="@+id/mailView"
			android:ems="10"
			android:inputType="textEmailAddress"
			android:text="@string/dog" />

		<Button
			android:id="@+id/sendCV"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@+id/mailText"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="37dp"
			android:onClick="Send_mes"
			android:text="@string/send"
			android:textSize="18sp" />

		<TextView
			android:id="@+id/warningView1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/mailText"
			android:layout_centerHorizontal="true"
			android:textColor="@color/redColor"
			android:textSize="16sp" />

		<Spinner
			android:id="@+id/gender_spinner"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignBottom="@+id/bdText"
			android:layout_toRightOf="@+id/bdText" />

		<TextView
			android:id="@+id/genderView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_above="@+id/bdText"
			android:layout_alignLeft="@+id/gender_spinner"
			android:text="@string/gender"
			android:textSize="18sp" />

	</RelativeLayout>
   
</ScrollView>


