<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
	<RelativeLayout 
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@drawable/background2"
		android:paddingBottom="@dimen/activity_vertical_margin"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/activity_vertical_margin"
		tools:context=".BossActivity" >

		<TextView
			android:id="@+id/textView1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/hello_world"
			android:textColor="@color/whiteColor"
			android:autoLink="email"
			android:textSize="18sp" />

		<EditText
			android:id="@+id/editText1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignLeft="@+id/textView1"
			android:layout_alignParentRight="true"
			android:layout_below="@+id/textView1"
			android:layout_marginTop="64dp"
			android:ems="10"
			android:inputType="textMultiLine"
			android:lines="@integer/lines" >

    	</EditText>

    	<Button
			android:id="@+id/button1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@+id/editText1"
			android:layout_centerHorizontal="true"
			android:textSize="20sp"
			android:onClick="onClick"
			android:text="@string/answer" />

		<TextView
			android:id="@+id/warningView2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/button1"
			android:layout_centerHorizontal="true"
			android:textColor="@color/redColor" />

		<TextView
		    android:id="@+id/textView2"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignLeft="@+id/editText1"
		    android:layout_below="@+id/textView1"
		    android:layout_marginTop="36dp"
		    android:text="@string/write_reply"
		    android:textColor="@color/whiteColor"
		    android:textSize="18sp" />

		<TextView
		    android:id="@+id/phonecallView"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignLeft="@+id/textView1"
		    android:layout_below="@+id/textView1"
		    android:contentDescription="@string/phone"
		    android:autoLink="phone"
		    android:textColor="@color/whiteColor"
		    android:textSize="18sp" />

	</RelativeLayout>
</ScrollView>


